# olist-deep-dive

./: .gitignore  README.md  dashboard.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.ipynb
contents/01_data_description_and_exploration/: 01_data_description.html  02_data_loading.html  03_data_exploration.html  04_intermediate_conclusion.html
contents/02_data_preprocessing/: 01_initial_data_filtering.html  02_outlier_handling.html  03_missing_value_handling.html  04_duplicate_handling.html  05_creating_new_metrics.html  06_creating_new_dimensions.html  07_converting_data_to_a_convenient_format.html  08_data_merging.html  09_intermediate_conclusion.html
contents/03_data_analysis/: 01_creating_analysis_class.html  02_time_series_analysis.html  03_customer_analysis.html  04_seller_analysis.html  05_sales_analysis.html  06_product_analysis.html  07_review_analysis.html  08_delivery_analysis.html  09_payment_analysis.html  10_geographical_analysis.html  11_cohort_analysis.html  12_correlation_analysis.html  13_slice_analysis.html  14_analysis_of_customer_segments.html  15_rfm_analysis.html  16_customer_clustering.html  17_hypothesis_testing.html
contents/04_general_conclusion/: 01_time_dynamics.html  02_customers.html  03_sales.html  04_products.html  05_reviews.html  06_delivery.html  07_payments.html  08_sellers.html  09_cohort_analysis.html  10_correlation_analysis.html  11_black_friday.html  (+3 more)
olist_deep_dive/: kernel-metadata.json  olist_deep_dive.ipynb  olist_deep_dive_kaggle.ipynb
(+76 files in other folders)
