[project]
name = "olist-deep-dive"
version = "0.1.0"
description = "Deep Dive into Olist E-Commerce: EDA | Viz | RFM | NLP | Geo | ML"
authors = [
    {name = "Pavel Grigoryev",email = "pavel.grigoryev.ds@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frameon (>=0.1.2,<0.2.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "linkify-it-py (>=2.0.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
myst-nb = "^1.3.0"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.7"
sphinx-favicon = "^1.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.1.4"
sphinx-inline-tabs = "^2023.4.21"


[tool.poetry.group.kaggle.dependencies]
kaggle = "^1.7.4.5"

